--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "vendic/module-extraordergrid",
     "description": "Magento 2 module that provides you with an extra order grid in the admin backend. You can give the grid a custom name and configure what order statuses to show.",
     "require": {
-        "php": "~7.3.0|~7.4.0|~8.1.0",
+        "php": "~7.3.0|~7.4.0|~8.1.0|~8.2.0",
         "magento/framework": "103.0.*"
     },
     "type": "magento2-module",
